--- a/src/app/components/parent-component/parent-component.component.html
+++ b/src/app/components/parent-component/parent-component.component.html
@@ -3,3 +3,7 @@
 <app-child-component [number]="number"></app-child-component>
 
 <app-child-component-two></app-child-component-two>
+
+<app-child-component-three>
+  <p #paragraph>ng-content {{ number }}</p>
+</app-child-component-three>
